--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,10 @@
 ---
+arnold_monster_animated.gif: arnold_monster_animated-13af98dc5e4e1693310e19dcdd9e3464.gif
+homepage/Jordan_Christina_workout.jpg: homepage/Jordan_Christina_workout-b669322e8c0c6e76317991deb1117243.jpg
+homepage/napoleon-dynamite.jpg: homepage/napoleon-dynamite-6a1764b11acfe738299be325c2f09d4a.jpg
+homepage/yoga.jpg: homepage/yoga-9bb7e46a9fa4a210db063694340f307d.jpg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-78274049441cb3263d9dd1535b71f700.js
+application.js: application-93fefa20e5e7501af34729a95f10c9c5.js
 application.css: application-bf3f8695c110f43f5fcce7266555146a.css
 jquery.min.map: jquery.min-607da4d20a427d3c86ec6b28cdc42e7f.map
 bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-6756e25aed68ca13209438727df4e8c7.eot
