--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,11 +1,18 @@
 ---
 arnold_monster_animated.gif: arnold_monster_animated-13af98dc5e4e1693310e19dcdd9e3464.gif
-homepage/Jordan_Christina_workout.jpg: homepage/Jordan_Christina_workout-b669322e8c0c6e76317991deb1117243.jpg
+homepage/Jordan_Christina_workout.jpg: homepage/Jordan_Christina_workout-f6d48fd92b2c03cb0221aa97d0d3951a.jpg
 homepage/napoleon-dynamite.jpg: homepage/napoleon-dynamite-6a1764b11acfe738299be325c2f09d4a.jpg
-homepage/yoga.jpg: homepage/yoga-9bb7e46a9fa4a210db063694340f307d.jpg
+homepage/rsz_people_running_on_treadmills.jpg: homepage/rsz_people_running_on_treadmills-ba132781dffe976bc2e74369e7799bcd.jpg
+homepage/women-working-out.jpg: homepage/women-working-out-0cac68871d5ff861a85ad04ddcd6642a.jpg
+homepage/yoga.jpg: homepage/yoga-784e42035e1372933ac4991f0f680a9b.jpg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-d3c161d4502505ee8c5bec77c9d2245d.js
-application.css: application-bf3f8695c110f43f5fcce7266555146a.css
+application.css: application-3a98f2f2b332fe41ea005ad8254136e0.css
+FontAwesome.otf: FontAwesome-bbdb41bed0b05c51639b3a9ea74cb741.otf
+fontawesome-webfont.eot: fontawesome-webfont-f67888d5955644864d05427053b88918.eot
+fontawesome-webfont.svg: fontawesome-webfont-12f7125cf5e74cba26c95696badeb410.svg
+fontawesome-webfont.ttf: fontawesome-webfont-2a4fc310ee5f425d5b6b07d5d7106940.ttf
+fontawesome-webfont.woff: fontawesome-webfont-c3539c6f9334bf6e70944599794b1976.woff
 jquery.min.map: jquery.min-607da4d20a427d3c86ec6b28cdc42e7f.map
 bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-6756e25aed68ca13209438727df4e8c7.eot
 bootstrap/glyphicons-halflings-regular.svg: bootstrap/glyphicons-halflings-regular-cce22b0934f6585c0106f4ef5d6764d9.svg
