--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -2,17 +2,18 @@
 arnold_monster_animated.gif: arnold_monster_animated-13af98dc5e4e1693310e19dcdd9e3464.gif
 homepage/Jordan_Christina_workout.jpg: homepage/Jordan_Christina_workout-f6d48fd92b2c03cb0221aa97d0d3951a.jpg
 homepage/napoleon-dynamite.jpg: homepage/napoleon-dynamite-6a1764b11acfe738299be325c2f09d4a.jpg
+homepage/people-with-thank-you-sign.jpg: homepage/people-with-thank-you-sign-5fa38636c0f404e48d92a17bb56f4ec8.jpg
+homepage/resized-sprinting-girl-Copy.jpg: homepage/resized-sprinting-girl-Copy-f62a05a698b15b18324aa6fab4744a7e.jpg
 homepage/rsz_people_running_on_treadmills.jpg: homepage/rsz_people_running_on_treadmills-ba132781dffe976bc2e74369e7799bcd.jpg
 homepage/women-working-out.jpg: homepage/women-working-out-0cac68871d5ff861a85ad04ddcd6642a.jpg
 homepage/yoga.jpg: homepage/yoga-784e42035e1372933ac4991f0f680a9b.jpg
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-d3c161d4502505ee8c5bec77c9d2245d.js
-application.css: application-3a98f2f2b332fe41ea005ad8254136e0.css
-FontAwesome.otf: FontAwesome-bbdb41bed0b05c51639b3a9ea74cb741.otf
-fontawesome-webfont.eot: fontawesome-webfont-f67888d5955644864d05427053b88918.eot
-fontawesome-webfont.svg: fontawesome-webfont-12f7125cf5e74cba26c95696badeb410.svg
-fontawesome-webfont.ttf: fontawesome-webfont-2a4fc310ee5f425d5b6b07d5d7106940.ttf
-fontawesome-webfont.woff: fontawesome-webfont-c3539c6f9334bf6e70944599794b1976.woff
+application.js: application-93fefa20e5e7501af34729a95f10c9c5.js
+application.css: application-0ff556488b68028de9ac7f43d1e18be7.css
+fontawesome-webfont.eot: fontawesome-webfont-639f71a9d5d884a6764a6dcad83fe0d8.eot
+fontawesome-webfont.svg: fontawesome-webfont-4b91213b0a1cf8ce2a9362661363df07.svg
+fontawesome-webfont.ttf: fontawesome-webfont-13834e923d0ef5e0964e6983cebf2724.ttf
+fontawesome-webfont.woff: fontawesome-webfont-7daae4e8c41bd3f07010a510f51c2097.woff
 jquery.min.map: jquery.min-607da4d20a427d3c86ec6b28cdc42e7f.map
 bootstrap/glyphicons-halflings-regular.eot: bootstrap/glyphicons-halflings-regular-6756e25aed68ca13209438727df4e8c7.eot
 bootstrap/glyphicons-halflings-regular.svg: bootstrap/glyphicons-halflings-regular-cce22b0934f6585c0106f4ef5d6764d9.svg
